[metadata]
name = scrapy_cloudflare_middleware
version = 0.0.1
url = https://github.com/clemfromspace/scrapy-cloudflare-middleware
licence = DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
description = A Scrapy Middleware to bypass the CloudFlare's anti-bot protection
long_description = file:README.md

[options]
include_package_data = true
